<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dip">

        <LinearLayout android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/wifi_section" />

        <LinearLayout android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/wifi_section"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/wifi_item_label"
                    android:text="@string/wifi_ssid"
                    android:textDirection="locale" />

                <EditText android:id="@+id/ssid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/wifi_item_edit_content"
                    android:hint="@string/wifi_ssid_hint"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="16"
                    style="@style/wifi_item_label"
                    android:text="@string/wifi_security" />

                <Spinner android:id="@+id/security"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/wifi_item_content"
                    android:prompt="@string/wifi_security"
                    android:entries="@array/wifi_security" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:id="@+id/security_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/wifi_section"
            android:visibility="gone">

            <LinearLayout android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/wifi_item_label"
                    android:text="@string/wifi_password" />

                <EditText android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/wifi_item_edit_content"
                    android:singleLine="true"
                    android:password="true" />
            </LinearLayout>

            <LinearLayout android:id="@+id/show_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item" >
                <!--  Dummy to enable right-justification of checkbox -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/wifi_item_label" />

                <CheckBox android:id="@+id/show_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/wifi_item_content"
                    android:textSize="14sp"
                    android:text="@string/wifi_show_password" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>